# cpp-perf

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  Makefile  README.md  perf_auto.hpp  perf_suite.hpp  perf_timer.hpp  perf_types.hpp  perf_util.hpp
.github/workflows/: ci.yml
doc/: Doxyfile
example/: CMakeLists.txt  auto.cpp  basic.cpp  inline.cpp  inline_mt.cpp  manual.cpp
include/: cpp-perf.hpp
include/cpp-perf/: auto.hpp  suite.hpp  timer.hpp  types.hpp  util.hpp
test/: CMakeLists.txt  test_format_code_position.cpp  test_format_duration.cpp  test_functions.cpp  test_timer.cpp
